--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   get_it: ^7.6.7
   dartz: ^0.10.1
   cloud_firestore: ^4.15.8
+  just_audio: ^0.9.40
 
 dev_dependencies:
   flutter_test:
